# waveshift

./: ' git rebase -i 4664aea  .gitignore  .gitmodules  .last-deploy-state  AUDIO_SEGMENT_REFACTOR.md  CLAUDE.md  DEPLOYMENT.md  DEPLOYMENT_GUIDE.md  PRESIGNED_URL_IMPLEMENTATION_COMPLETE.md  PROJECT_STATUS.md  R2_CORS_CONFIGURATION.md  R2_PUBLIC_ACCESS_SETUP.md  README.md  STREAMING_TTS_INTEGRATION_REPORT.md  UPLOAD_IMPROVEMENTS_SUMMARY.md  cloudflared.out  db-migration-complete-fix.sql  db-migration-media-schema-fix.sql  db-migration-optimize.sql  db-migration-production-fix.sql  deploy-all.sh  deploy-final-fix.sh  deploy-media-fix.sh  fix-service-binding.sh  package-lock.json  package.json  test-audio-segment.sh  test-container-direct.js  test-db-structure.sh  test-e2e.sh  test-end-to-end-tts.js  test-new-architecture.js
docs/: README.md
fc-denoise-service/: .env.example  Dockerfile  Dockerfile.update  GITHUB_ACTIONS_SETUP.md  README.md  deploy-fast.sh  deploy.sh  requirements.txt  response-headers.txt  s.yaml
ffmpeg-worker/: Dockerfile  deploy.sh  tsconfig.json  tsconfig.tsbuildinfo  worker-configuration.d.ts  wrangler.jsonc
ffmpeg-worker/separate-container/: Cargo.toml
ffmpeg-worker/separate-container/src/: main.rs
frontend/: .dev.vars.local  .gitignore  BACKUP_AUTH_CONTEXT.md  DESIGN.md  OPTIMIZATION_SUMMARY.md  drizzle.config.ts  eslint.config.mjs  (+5 more)
waveshift-audio-segment-worker/audio-segment-container/: .dockerignore  Cargo.toml  Dockerfile  requirements.txt
waveshift-audio-segment-worker/audio-segment-container/src/: __init__.py  main.py  main.rs
(+278 files in other folders)
