[package]
name = "separate-container"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
multipart = "0.18"
tokio-util = "0.7"
mime = "0.3"
uuid = { version = "1.0", features = ["v4"] }
tempfile = "3.0"
bytes = "1.0"
futures-util = "0.3"
hyper = { version = "0.14", features = ["full"] }
hyper_multipart = "0.2"