[package]
name = "audio-segment-container"
version = "0.1.0"
edition = "2021"

[dependencies]
tokio = { version = "1.0", features = ["full", "process"] }
hyper = { version = "0.14", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
tempfile = "3.0"
uuid = { version = "1.0", features = ["v4"] }
futures = "0.3"
chrono = { version = "0.4", features = ["serde"] }